mqtt/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-broker
  namespace: feira-de-jogos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-broker
  template:
    metadata:
      labels:
        app: mqtt-broker
    spec:
      containers:
        - name: mqtt-broker
          image: eclipse-mosquitto
          ports:
            - containerPort: 1883
              name: mqtt-tcp
            - containerPort: 8083
              name: mqtt-ws
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
