mqtt/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker
  namespace: feira-de-jogos
spec:
  selector:
    app: mqtt-broker
  ports:
    - name: mqtt
      port: 8083
      targetPort: 8083
