mqtt/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: feira-gateway
  namespace: feira-de-jogos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "mqtt.k8s.sj.ifsc.edu.br"
      tls:
        mode: Terminate
        certificateRefs:
          - name: feira-jogos-tls-secret
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: "mqtt.k8s.sj.ifsc.edu.br"
      allowedRoutes:
        namespaces:
          from: Same
