mqtt/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mqtt-route
  namespace: feira-de-jogos
spec:
  parentRefs:
    - name: feira-gateway
      sectionName: https
  hostnames:
    - "mqtt.k8s.sj.ifsc.edu.br"
  rules:
    - backendRefs:
        - name: mqtt-broker
          port: 8083
